# score_devcontainer

./: .pre-commit-config.yaml
scripts/: run_reuse_annotate.sh
src/s-core-devcontainer/.devcontainer/: Dockerfile  devcontainer.json
src/s-core-devcontainer/.devcontainer/s-core-local/: install.sh
src/s-core-devcontainer/.devcontainer/s-core-local/tests/: test_default.sh
tools/: BUILD.bazel  README.md  run_tool.sh
tools/lockfiles/: python_tools.lock.sh
