# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

package(default_visibility = ["//visibility:public"])

exports_files(glob(["lockfiles/*.lock.*"]))

alias(
    name = "actionlint",
    actual = "@multitool//tools/actionlint:cwd",
)

alias(
    name = "bazelisk",
    actual = "@multitool//tools/bazelisk:cwd",
)

alias(
    name = "buildifier",
    actual = "@multitool//tools/buildifier:cwd",
)

alias(
    name = "ruff",
    actual = "@multitool//tools/ruff:cwd",
)

alias(
    name = "shellcheck",
    actual = "@multitool//tools/shellcheck:cwd",
)

alias(
    name = "starpls",
    actual = "@multitool//tools/starpls:cwd",
)

alias(
    name = "uv",
    actual = "@multitool//tools/uv:cwd",
)

alias(
    name = "uvx",
    actual = "@multitool//tools/uvx:cwd",
)

alias(
    name = "yamlfmt",
    actual = "@multitool//tools/yamlfmt:cwd",
)
